istio-exauth/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: secureauth
spec:
  selector:
    app: secureauth
  ports:
    - name: http
      port: 80
